--- a/filmHub/appsettings.json
+++ b/filmHub/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=.;Initial Catalog=filmHub;Integrated Security=True;Pooling=False"
+  },
   "AllowedHosts": "*"
 }
