--- a/filmHub/Properties/launchSettings.json
+++ b/filmHub/Properties/launchSettings.json
@@ -11,6 +11,7 @@
     "filmHub": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "Movies",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
